--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,9 @@
 
 
         {% block stylesheets %}
+
             <link href="{{ asset('frontOffice/assets/css/bootstrap.min.css') }}"  rel="stylesheet" />
+            <link href="{{ asset('frontOffice/assets/css/choicePicker.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/css/owl.theme.default.min.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/css/owl.carousel.min.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/css/swiper-bundle.min.css') }}"  rel="stylesheet" />
@@ -26,6 +28,7 @@
         {% block javascripts %}
             <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
             <script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
+            <script src="{{ asset('assets/js/choicePicker.js') }}"></script>
             <script src="{{ asset('assets/js/meanmenu.min.js') }}"></script>
             <script src="{{ asset('assets/js/owl.carousel.min.js') }}"></script>
             <script src="{{ asset('assets/js/swiper-bundle.min.js') }}"></script>
