integration template front && complited authentification

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -33,6 +33,10 @@
 								<i class="ri-user-3-line"></i>
 								<a href="{{path('login')}}">Login</a>
 
+							</li>	<li>
+								<i class="ri-login-box-line"></i>
+								<a href="{{path('register')}}">Signup</a>
+
 							</li>
 							<li>
 								<select class="form-select" aria-label="Default select example">
