--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,48 +5,7 @@
 
     <body>
 
-    <!--  Start Header Area -->
-    <div class="top-header-area bg-color-091c47">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-8">
-                    <ul class="header-left-content">
-                        <li>
-                            <span>Phone:</span>
-                            <a href="tel:1-885-665-2022">1-885-665-2022</a>
-                        </li>
-                        <li>
-                            <span>Email:</span>
-                            <a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#a8c1c6cec7e8cacdd0c186cbc7c5"><span class="__cf_email__" data-cfemail="d3babdb5bc93b1b6abbafdb0bcbe">[email&#160;protected]</span></a>
-                        </li>
-                        <li>
-                            <span>Mon-Sat:</span>
-                            8:00AM - 7:00PM
-                        </li>
-                    </ul>
-                </div>
 
-                <div class="col-lg-4">
-                    <ul class="header-right-content">
-                        <li>
-                            <i class="ri-user-3-line"></i>
-                            <a >Login</a>
-                        </li>
-                        <li>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>English</option>
-                                <option value="1">China</option>
-                                <option value="2">العربيّة</option>
-                                <option value="3">Germany</option>
-                                <option value="4">Portugues</option>
-                            </select>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Header Area -->
     <!-- Start Page Banner Area -->
     <div class="page-banner-area bg-22 pt-100">
         <div class="container">
@@ -75,20 +34,14 @@
 
 
                 <div class="col-lg-6">
-                        {{ form_start(registrationForm) }}
-                        {{ form_row(registrationForm.roles) }}
-                    <div class="toggleswitch">
-                        <input type="checkbox" name="toggleswitch" value="" class="toggleswitch-checkbox" id="myonoffswitch" checked>
-                        <label class="toggleswitch-label" for="myonoffswitch">
-                            <span class="toggleswitch-inner"></span>
-                            <span class="toggleswitch-switch"></span>
-                        </label>
-                    </div>
+                        {{ form_start(registrationForm ,{'attr': {'novalidate': 'novalidate'}}) }}
+                        {{ form_row(registrationForm.roles ,{'attr': {'novalidate': 'novalidate'}} ) }}
+                        {{ form_row(registrationForm.nom,{'attr': {'novalidate': 'novalidate'}}) }}
+                        {{ form_row(registrationForm.prenom,{'attr': {'novalidate': 'novalidate'}}) }}
+                        {{ form_row(registrationForm.email ,{'attr': {'novalidate': 'novalidate'}}) }}
 
-                        {{ form_row(registrationForm.nom) }}
-                        {{ form_row(registrationForm.prenom) }}
-                        {{ form_row(registrationForm.email) }}
-                        {{ form_row(registrationForm.plainPassword, { label: 'Password' }) }}
+                        {{ form_row(registrationForm.plainPassword.first, { label: 'Password' }) }}
+                        {{ form_row(registrationForm.plainPassword.second, { label: 'Password' }) }}
                         {{ form_row(registrationForm.agreeTerms) }}
 
                         <div class="d-flex align-items-center">
