--- a/templates/security/forgetPassword.html.twig
+++ b/templates/security/forgetPassword.html.twig
@@ -58,44 +58,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <form class="login-register-form-area login" method="post">
-                        {% if error %}
-                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                        {% endif %}
+                    {{ form_start(emailForm, {'attr': {'id': 'emailForm'}}) }}
+                    <form method="post">
+                        {{ form_widget(emailForm.email,{'attr':{'class':'form-control','placeholder': "Email"}}) }}
 
-                        {% if app.user %}
-                            <div class="mb-3">
-                                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                            </div>
-                        {% endif %}
-                        <h2>Login</h2>
-
-                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-                        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-
-                        <div class="form-group">
-                            <div class="forgot d-flex justify-content-between align-items-center">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
-                                        Remember me
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <a href="{{path('forgetPassword')}}">Forgot password ?</a>
-                                </div>
-                            </div>
-                        </div>
 
                         <div class="d-flex align-items-center">
                             <button type="submit" class="default-btn me-3">
-                                Login
+                                Send Me Email
                             </button>
                             <p>Don’t have an account? <a href="{{path('register')}}">Register now</a></p>
                         </div>
+                        {{ form_row(emailForm._token) }}
                     </form>
                 </div>
 
