--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -58,43 +58,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <form class="login-register-form-area login" method="post">
-                        {% if error %}
-                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                        {% endif %}
-
-                        {% if app.user %}
-                            <div class="mb-3">
-                                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                            </div>
-                        {% endif %}
-                        <h2>Login</h2>
-
-                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-                        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-
+                    <form method="POST">
                         <div class="form-group">
-                            <div class="forgot d-flex justify-content-between align-items-center">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
-                                        Remember me
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <a href="{{path('forgetPassword')}}">Forgot password ?</a>
-                                </div>
+                            <div class="fxt-transformY-50 fxt-transition-delay-2">
+                                <input id="password" type="password" class="form-control" name="password" placeholder="********" required="required">
+                                <input type="hidden" name="token" value="{{ token }}">
+                                <i toggle="#password" class="fa fa-fw fa-eye toggle-password field-icon"></i>
                             </div>
                         </div>
-
-                        <div class="d-flex align-items-center">
-                            <button type="submit" class="default-btn me-3">
-                                Login
-                            </button>
-                            <p>Don’t have an account? <a href="{{path('register')}}">Register now</a></p>
+                        <div class="form-group">
+                            <div class="fxt-transformY-50 fxt-transition-delay-4">
+                                <button type="submit" class="fxt-btn-fill">Send Me Email</button>
+                            </div>
                         </div>
                     </form>
                 </div>
