first_consultation_complete

--- a/templates/nav_con.html.twig
+++ b/templates/nav_con.html.twig
@@ -230,7 +230,12 @@
                                                 </div>
                                             </div>
                                         </li>
-                                        
+                                        <li>
+                                            <a href="{{path('app_reservation_specialite')}}" class="default-btn">
+                                                <i class="ri-clipboard-line"></i>
+                                                <span>Appointment</span>
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
