--- a/templates/back_office/evenement/edit.html.twig
+++ b/templates/back_office/evenement/edit.html.twig
@@ -45,13 +45,20 @@
                                             {{ form_widget(form.prix) }}
                                         </div>
                                     </div>
+                                    <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            {{ form_label(form.type) }}
+                                            {{ form_widget(form.type,{'attr': {'class': 'form-control'}}) }}
+                                            {{ form_errors(form.type) }}
+                                        </div>
+                                    </div>
                                     <!--end col-->
                                     <div class="col-lg-12">
                                     <div class="hstack gap-2 justify-content-end">
-                                        <button type="submit" class="btn btn-primary">Update</button>
-                                        <button type="button" class="btn btn-soft-success">Cancel</button>
+                                        <button type="submit" class="btn btn-outline-success">Update</button>
+                                        <button type="button" class="btn btn-outline-info"><a href="{{ path('app_evenement_index') }}">cancel</a> </button>
                                     </div>
-                                </div> col-->
+                                </div> 
                                 </div>
                                 <!--end row-->
                             {{ form_end(form) }}
