--- a/templates/back_office/evenement/new.html.twig
+++ b/templates/back_office/evenement/new.html.twig
@@ -12,7 +12,7 @@
                         <div class="tab-pane active" id="personalDetails" role="tabpanel">
                             {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-8">
                                         <div class="mb-3">
                                             {{ form_label(form.nom) }}
                                             {{ form_widget(form.nom) }}
@@ -42,19 +42,26 @@
                                             {{ form_widget(form.date) }}
                                             {{ form_errors(form.date) }}
                                         </div>
-                                    </div><div class="col-lg-12">
+                                    </div>
+                                    <div class="col-lg-12">
                                         <div class="mb-3">
                                             {{ form_label(form.prix) }}
                                             {{ form_widget(form.prix) }}
                                             {{ form_errors(form.prix) }}
                                         </div>
                                     </div>
-                                    <!--end col-->
                                     <div class="col-lg-12">
-                                        <div class="hstack gap-2 justify-content-end">
-                                            <button type="submit" class="btn btn-primary ">Create</button>
-                                            <button type="button" class="btn btn-soft-success">Cancel</button>
+                                        <div class="mb-3">
+                                            {{ form_label(form.type) }}
+                                            {{ form_widget(form.type,{'attr': {'class': 'form-control'}}) }}
+                                            {{ form_errors(form.type) }}
                                         </div>
+                                    </div>
+                                    <!--end col-->
+                                    
+                                    <div class="hstack gap-2 justify-content-end">
+                                        <button type="submit" class="btn btn-outline-success">create</button>
+                                        <button type="button" class="btn btn-outline-info"><a href="{{ path('app_evenement_index') }}">cancel</a> </button>
                                     </div>
                                     <!--end col-->
                                 </div>
