--- a/templates/back_office/evenement/show.html.twig
+++ b/templates/back_office/evenement/show.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Evenement{% endblock %}
 
 {% block content %}
-    <h1>Evenement</h1>
+    <h1>Evenement details</h1>
 
     <table class="table">
         <tbody>
@@ -30,12 +30,22 @@
                 <th>Prix</th>
                 <td>{{ evenement.prix }}</td>
             </tr>
+             <tr>
+                <th>type</th>
+                <td>{{ evenement.type }}</td>
+            </tr>
+            
         </tbody>
     </table>
 
-    <a href="{{ path('app_evenement_index') }}">back to list</a>
+    
 
-    <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
+    
+    <div class="d-grid gap-2 d-md-block">
+    <button type="button" class="btn btn-outline-info"><a href="{{ path('app_evenement_index') }}">back to list</a> </button>
+    <button type="button" class="btn btn-outline-warning"><a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a> </button>
 
+  
+    </div>
     
 {% endblock %}
