--- a/templates/back_office/evenement/edit.html.twig
+++ b/templates/back_office/evenement/edit.html.twig
@@ -52,6 +52,13 @@
                                             {{ form_errors(form.type) }}
                                         </div>
                                     </div>
+                                     <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            {{ form_label(form.description) }}
+                                            {{ form_widget(form.description) }}
+                                            {{ form_errors(form.description) }}
+                                        </div>
+                                    </div>
                                     <!--end col-->
                                     <div class="col-lg-12">
                                     <div class="hstack gap-2 justify-content-end">
