--- a/templates/back_office/evenement/new.html.twig
+++ b/templates/back_office/evenement/new.html.twig
@@ -57,6 +57,14 @@
                                             {{ form_errors(form.type) }}
                                         </div>
                                     </div>
+                                      <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            {{ form_label(form.description) }}
+                                            {{ form_widget(form.description) }}
+                                            {{ form_errors(form.description) }}
+                                        </div>
+                                    </div>
+                                    
                                     <!--end col-->
                                     
                                     <div class="hstack gap-2 justify-content-end">
