--- a/templates/back_office/evenement/show.html.twig
+++ b/templates/back_office/evenement/show.html.twig
@@ -34,6 +34,10 @@
                 <th>type</th>
                 <td>{{ evenement.type }}</td>
             </tr>
+             <tr>
+                <th>description</th>
+                <td>{{ evenement.description }}</td>
+            </tr>
             
         </tbody>
     </table>
