--- a/templates/main/patient.html.twig
+++ b/templates/main/patient.html.twig
@@ -12,6 +12,9 @@
 	<div class="doctor-details-area ptb-100">
 		<div class="container">
 			<div class="doctor-details-content">
+				<div style=" padding-top: 35px;margin-left: 1100px">
+					<a class="default-btn active" href="{{path('modifierProfile',{'id':app.user.id})}}">Setting</a>
+				</div>
 				<div class="doctor-details-wrap">
 					<div class="row align-items-center">
 						<div class="col-lg-6">
