--- a/templates/back_office/Security/listMedecin.html.twig
+++ b/templates/back_office/Security/listMedecin.html.twig
@@ -25,10 +25,12 @@
                 <div style="margin-right: 300px" class="kt-content  kt-grid__item kt-grid__item--fluid" id="kt_content">
 
                     <!--begin:: Widgets/Applications/User/Profile3-->
-                    <div class="kt-portlet">
-                        {% for u in user %}
-                            {% if u.roles == ["ROLE_MEDECIN"] %}
-                      <div class="row" >
+                    {% for u in user %}
+                    {% if u.roles == ["ROLE_MEDECIN"] %}
+                    <div style="margin-bottom: 20px" class="kt-portlet">
+
+                     <div >
+                         <div  class="row" >
                         <div  class="kt-portlet__body">
 
                             <div  class="kt-widget kt-widget--user-profile-3">
@@ -122,10 +124,11 @@
 
                         </div>
                       </div>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
+                     </div>
 
+                    </div>
+                    {% endif %}
+                    {% endfor %}
 
 
 
