--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -35,7 +35,7 @@
 
                 <div class="col-lg-6">
                         {{ form_start(registrationForm ,{'attr': {'novalidate': 'novalidate'}}) }}
-                        {{ form_row(registrationForm.roles ,{'attr': {'novalidate': 'novalidate'}} ) }}
+                        {{ form_row(registrationForm.roles ,{'attr': {'class': 'default-btn me-3'} } ) }}
                         {{ form_row(registrationForm.nom,{'attr': {'novalidate': 'novalidate'}}) }}
                         {{ form_row(registrationForm.prenom,{'attr': {'novalidate': 'novalidate'}}) }}
                         {{ form_row(registrationForm.email ,{'attr': {'novalidate': 'novalidate'}}) }}
