--- a/templates/back_office/Security/listSpeciality.html.twig
+++ b/templates/back_office/Security/listSpeciality.html.twig
@@ -92,7 +92,7 @@
                                 <table class="table table-striped- table-bordered table-hover table-checkable" id="kt_table_1">
                                     <thead>
                                     <tr>
-                                        <th>Nom</th>
+                                        <th>Name </th>
 
 
                                     </tr>
