--- a/templates/back_office/base.html.twig
+++ b/templates/back_office/base.html.twig
@@ -130,6 +130,8 @@
         <script src="{{ asset('backOffice/assets/vendors/custom/gmaps/gmaps.js') }}" type="text/javascript"></script>
         <script src="{{ asset('backOffice/assets/js/demo1/pages/dashboard.js') }}" type="text/javascript"></script>
     {% endblock %}
+    {% if app.user %}
+        {%  if is_granted('ROLE_ADMIN') %}
     <!-- begin:: nav-horizantal -->
     <div class="kt-aside  kt-aside--fixed  kt-grid__item kt-grid kt-grid--desktop kt-grid--hor-desktop" id="kt_aside">
 
@@ -531,13 +533,14 @@
         <!-- end:: Footer -->
     </div>
     <!-- end:: nav-vertical -->
-
+    {% endif %}
+    {% endif %}
 
 </head>
 {% block body %}{% endblock %}
 
 
-<footer>
+<footer style="">
     <div class="kt-mycart__footer">
         <div class="kt-mycart__section">
             <div class="kt-mycart__subtitel">
