--- a/templates/security/forgetPassword.html.twig
+++ b/templates/security/forgetPassword.html.twig
@@ -42,12 +42,7 @@
     <div class="page-banner-area bg-22 pt-100">
         <div class="container">
             <div class="page-banner-content">
-                <a href="{{path('home')}}">
-                    <i class="ri-home-8-line"></i>
-                    Home
-                </a>
-                <h2>DocNet.login</h2>
-
+                <h2>Forget password</h2>
             </div>
         </div>
     </div>
@@ -64,10 +59,10 @@
 
 
                         <div class="d-flex align-items-center">
-                            <button type="submit" class="default-btn me-3">
+                            <button style="margin-top: 20px" type="submit" class="default-btn me-3">
                                 Send Me Email
                             </button>
-                            <p>Don’t have an account? <a href="{{path('register')}}">Register now</a></p>
+                            <p style="margin-top: 40px">Don’t have an account? <a href="{{path('register')}}">Register now</a></p>
                         </div>
                         {{ form_row(emailForm._token) }}
                     </form>
