--- a/templates/back_office/base.html.twig
+++ b/templates/back_office/base.html.twig
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <!-- begin::Head -->
 <head>
     <meta charset="UTF-8">
@@ -130,16 +128,14 @@
         <script src="{{ asset('backOffice/assets/vendors/custom/gmaps/gmaps.js') }}" type="text/javascript"></script>
         <script src="{{ asset('backOffice/assets/js/demo1/pages/dashboard.js') }}" type="text/javascript"></script>
     {% endblock %}
-    {% if app.user %}
-        {%  if is_granted('ROLE_ADMIN') %}
     <!-- begin:: nav-horizantal -->
     <div class="kt-aside  kt-aside--fixed  kt-grid__item kt-grid kt-grid--desktop kt-grid--hor-desktop" id="kt_aside">
 
         <!-- begin:: Aside -->
         <div style="  background-color: white" class="kt-aside__brand kt-grid__item "  id="kt_aside_brand">
             <div  class="kt-aside__brand-logo">
-                <a href="demo1/index.html">
-                    <img style="max-width: 90%" alt="Logo" src="{{ asset('frontOffice/assets/images/DocNet.png') }}" />
+                <a href=" {{ path("homeAdmin") }}">
+                    <img  style="max-width: 90%" alt="Logo" src="{{ asset('frontOffice/assets/images/DocNet.png') }}" />
                 </a>
             </div>
             <div class="kt-aside__brand-tools">
@@ -533,14 +529,11 @@
         <!-- end:: Footer -->
     </div>
     <!-- end:: nav-vertical -->
-    {% endif %}
-    {% endif %}
+
 
 </head>
 {% block body %}{% endblock %}
-
-
-<footer style="">
+<footer>
     <div class="kt-mycart__footer">
         <div class="kt-mycart__section">
             <div class="kt-mycart__subtitel">
@@ -557,11 +550,4 @@
 
     </div>
 </footer>
-
-
-
-
-
-
-
 </html>
