--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -390,7 +390,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-footer-widget">
                         <a href="index.html" class="logo">
-                            <img src="{{ asset('frontOffice/assets/images/DocNet.png') }}" style="max-width: 40%" class="main-logo" alt="logo">
+                            <img href="{{path('home')}}" src="{{ asset('frontOffice/assets/images/DocNet.png') }}" style="max-width: 40%" class="main-logo" alt="logo">
                         </a>
                         <p>Connect for your health , with DocNet.</p>
                        
