--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -42,12 +42,7 @@
     <div class="page-banner-area bg-22 pt-100">
         <div class="container">
             <div class="page-banner-content">
-                <a href="{{path('home')}}">
-                    <i class="ri-home-8-line"></i>
-                    Home
-                </a>
-                <h2>DocNet.login</h2>
-
+                <h2>Reset password</h2>
             </div>
         </div>
     </div>
@@ -68,7 +63,7 @@
                         </div>
                         <div class="form-group">
                             <div class="fxt-transformY-50 fxt-transition-delay-4">
-                                <button type="submit" class="fxt-btn-fill">Send Me Email</button>
+                                <button style="margin-top: 20px " type="submit" class="default-btn me-3">Reset</button>
                             </div>
                         </div>
                     </form>
@@ -78,24 +73,6 @@
         </div>
     </div>
     <!-- End My Account Area -->
-
-    <!-- Start Footer Area -->
-    <!-- End Footer Area -->
-
-    <!-- Start Copyright Area -->
-    <div class="copy-right-area">
-        <div class="container">
-            <p>© Bexi is Proudly Owned by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
-        </div>
-    </div>
-    <!-- End Copyright Area -->
-
-    <!-- Start Go Top Area -->
-    <div class="go-top">
-        <i class="ri-arrow-up-s-fill"></i>
-        <i class="ri-arrow-up-s-fill"></i>
-    </div>
-    <!-- End Go Top Area -->
 
 
     </body>
