--- a/templates/back_office/evenement/new.html.twig
+++ b/templates/back_office/evenement/new.html.twig
@@ -64,6 +64,16 @@
                                             {{ form_errors(form.description) }}
                                         </div>
                                     </div>
+                                    <!-- Start Contact Area -->
+		                            
+            
+
+
+
+				</div>
+			</div>
+		</div>
+
                                     
                                     <!--end col-->
                                     
