--- a/templates/main/modifierImage.html.twig
+++ b/templates/main/modifierImage.html.twig
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Dark Mode Area -->
+		<!-- End descriptionDark Mode Area -->
 
 
 		<!-- Start Copyright Area -->
