--- a/templates/main/patient.html.twig
+++ b/templates/main/patient.html.twig
@@ -29,7 +29,26 @@
 									<li>
 										<span>Email:</span>
 										{{ app.user.Email }}
-									</li>	
+									</li>
+									<li>
+										<span>Address:</span>
+										{{ app.user.adresse }}
+									</li>
+									<li>
+										<span>Phone:</span>
+										{{ app.user.numero }}
+									</li>
+									<li>
+										Patient Experience Rating
+										<p>
+											<i class="ri-star-s-fill"></i>
+											<i class="ri-star-s-fill"></i>
+											<i class="ri-star-s-fill"></i>
+											<i class="ri-star-s-fill"></i>
+											<i class="ri-star-s-fill"></i>
+											5 Stars
+										</p>
+									</li>
 								</ul>
 							</div>
 						</div>
