--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,9 +5,6 @@
 {% block body %}
 
     <body>
-
-
-
     <!-- Start Page Banner Area -->
     <div class="page-banner-area bg-22 pt-100">
         <div style="padding-left: 280px" class="container">
@@ -17,22 +14,22 @@
                         <div class="row">
                             <div class="col-lg-12" style="width: 500px;margin-left: 50px" >
                                 <form class="login-register-form-area login" method="post">
-                                    {% if error %}
-                                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                    {% endif %}
 
+
+
+                                    <h2 style="margin-left: 140px">Login</h2>
                                     {% if app.user %}
                                         <div class="mb-3">
                                             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
                                         </div>
                                     {% endif %}
-                                    <h2>Login</h2>
-
-                                    <input style="margin-bottom: 20px" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-                                    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                                    <input style="margin-bottom: 20px" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" >
+                                    <input style="margin-bottom: 20px" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password">
 
                                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
+                                    {% if error %}
+                                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                    {% endif %}
 
                                     <div class="form-group">
                                         <div class="forgot d-flex justify-content-between align-items-center">
