qr code with omar

--- a/templates/events/list.html.twig
+++ b/templates/events/list.html.twig
@@ -19,7 +19,8 @@
 							<div class="col">
 								<div class="card shadow-sm">
 									<div>
-										<img src="{{ qr_code_data_uri(event) }}"/>
+										<img src="{{ qr_code_data_uri(event.capacite) }}"/>
+										
 									</div>
 									<div class="card-body">
 										<p class="card-text">{{event.nom}}</p>
